# cash-pilot-telegram-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit
src/: cashpilot_client.py  telegram_main.py
src/handlers/: cash_session.py
src/telegram_bot/: bot.py  messages.py
tests/: test_bot_handlers.py  test_cash_session_commands.py
