[project]
name = "cash-pilot-telegram-bot"
version = "0.1.0"
description = "Telegram bot client for CashPilot pharmacy system"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.3",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "ruff==0.6.9",
    "isort==5.13.2",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_scope = "function"
